adding github and blogpost links

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@ border-radius:10px;</code></pre>
 		</div>
 		<div id="footer">
 			<p class="twitter"><a href="http://twitter.com/shapeshed">Follow me on Twitter</a></p>
-			<p>Created by <a href="http://twitter.com/shapeshed">George Ornbo.</a> | <a href="http://github.com/shapeshed/hcardme/tree/master">Get the source from Github</a> | Licensed under a <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons 3.0</a> License</p>
+			<p>Created by <a href="http://twitter.com/shapeshed">George Ornbo.</a> | <a href="http://github.com/shapeshed/border-radius-demo/tree/master">Get the source from Github</a> | Licensed under a <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons 3.0</a> License</p>
+			<p>The accompanying blog post for this demonstration <a href="http://shapeshed.com/journal/css3_tour_border-radius/">can be found here.</a></p>
 		</div>
 	</div>
 </body>
